@@ -1,8 +1,8 @@
 <div id="cookie-menu">
-  <ul id="navlist">
-    <!-- BEGIN parent-row --><li id="active">{PARENT}
-    <!-- BEGIN subactive --><ul id="subnavlist">
-        <!-- BEGIN child-row --><li id="subactive">{CHILD}</li><!-- END child-row -->
+  <ul>
+    <!-- BEGIN parent-row --><li>{PARENT}
+    <!-- BEGIN subactive --><ul>
+        <!-- BEGIN child-row --><li>{CHILD}</li><!-- END child-row -->
       </ul><!-- END subactive -->
     </li>
     <!-- END parent-row -->
