@@ -1,3 +1,7 @@
+6 September 2007
++ Rewrote category horizontal menu.
++ Updated files: templates/list.tpl, templates/style.css
+
 Version 2.1.8
 ---------------------------------------------------------------------
 4 April 2007
